--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "http-proxy-middleware": "^1.0.5",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
